--- a/SMSGateway/Views/Shared/_Layout.cshtml
+++ b/SMSGateway/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] - SMSGateway</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/SMSGateway.styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
@@ -24,6 +23,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Sms" asp-action="Index">Send SMS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Admin" asp-action="Settings">⚙️ Settings</a>
                     </li>
                 </ul>
             </div>
